fixed highlight color on mobile menu

--- a/meditation.css
+++ b/meditation.css
@@ -67,19 +67,23 @@ html {
     right: 2%;
     cursor: pointer;
     z-index: 2;
+    transform: translateX(-5px);
 }
 
 .navbar__toggle__hover__background {
     position: absolute;
+    top: 1%;
+    right: 2%;
     height: 40px;
     width: 40px;
+    transform: translateY(-5px);
     border-radius: 50%;
     z-index: 0;
 }
 
-#mobile__menu:hover .navbar__toggle__hover__background {
+#mobile__menu:hover + .navbar__toggle__hover__background {
     background-color: rgb(77, 77, 77);
-    opacity: .3;
+    opacity: .7;
 }
 
 #navbar__menu {
@@ -155,14 +159,14 @@ html {
     height: 50px;
     width: 50px;
     left: 20px;
-    background-color: transparent;
+    /* background-color: transparent; */
     background-image: url("./images_sound/play_btn.png");
     border: none;
     cursor: pointer;
 }
 
-.play__button__icon.hover {
-    background-color: grey, .5;
+.play__button__icon:hover {
+    background-color: white;
 }
 
 .play__button__icon.active {
